# SystemMonitor

./: CMakeLists.txt  CPU_Page.cpp  CPU_Page.hpp  CPU_Regs.hpp  Driver_Page.cpp  Driver_Page.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp  style.qss
MyWidget/: CpuWidget.cpp  CpuWidget.hpp
Page/: CPU_Page.cpp  CPU_Page.h  Driver_Page.cpp  Driver_Page.hpp  GPU_Page.cpp  GPU_Page.hpp  Memory_Page.cpp  Memory_Page.hpp  Process_Page.cpp  Process_Page.hpp  System_Page.cpp  System_Page.hpp
Page/Utils/: CpuMonitor.cpp  CpuMonitor.h  DriverMonitor.cpp  DriverMonitor.hpp  Gpumonitor.cpp  Gpumonitor.hpp  MemoryMonitor.cpp  MemoryMonitor.hpp  Processes.cpp  Processes.hpp  SystemMonitor.cpp  SystemMonitor.hpp
